--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -15,7 +15,7 @@
     text-transform: uppercase;
     font-size: 14px;
     display: flex;
-    align-items: center;
+    // align-items: center;
     position: relative;
     img {
       position: absolute;
