--- a/scss/career-page.scss
+++ b/scss/career-page.scss
@@ -1,8 +1,8 @@
 .career-page {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
   .top-panel {
     background: url(../img/careerblue.png);
     padding: 46px 0 47px;
