--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -27,9 +27,9 @@
          }
          > div:last-child {
           background: url(../img/animation/botl/mass-production.svg);
-          background-size: cover;
+          // background-size: cover;
           width: 90px;
-          height: 20px;
+          height: 58px;
           position: absolute;
           background-position: 0 0;
           top: 10px;
