--- a/scss/products-import-page.scss
+++ b/scss/products-import-page.scss
@@ -15,6 +15,9 @@
     width: 100%;
     position: relative;
     padding-bottom: 100px;
+    @media screen and (max-width: 768px) {
+      padding-bottom: 30px;
+    }
     &-bg {
       position: absolute;
       background: url(../img/aznauri.png) no-repeat;
@@ -30,26 +33,62 @@
     .container {
       padding-top: 71px;
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
+      @media screen and (max-width: 768px) {
+        padding-top: 30px;
+      }
     }
     &-image {
       width: calc(45% - 5px);
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
       img {
         max-width: 83%;
         width: 100%;
+        @media screen and (max-width: 768px) {
+          max-width: 300px;
+          margin: auto;
+          height: 300px;
+          display: block;
+          object-fit: contain;
+        }
+        @media screen and (max-width: 480px) {
+          max-width: 200px;
+          height: 200px;
+        }
       }
     }
     &-info {
       width: calc(55% + 5px);
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
       &__title {
         font-size: 60px;
         font-weight: 600;
         color: #313131;
+        @media screen and (max-width: 768px) {
+          text-align: center;
+          font-size: 48px;
+          margin-top: 20px;
+        }
+        @media screen and (max-width: 480px) {
+          font-size: 38px;
+        }
       }
       &__subtitle {
         font-size: 36px;
         color: #313131;
         margin-top: 5px;
+        @media screen and (max-width: 768px) {
+          text-align: center;
+          font-size: 30px;
+        }
+        @media screen and (max-width: 480px) {
+          font-size: 24px;
+        }
       }
       &__descr {
         position: relative;
@@ -57,12 +96,18 @@
         padding: 39px 21px 42px 30px;
         background: #fbfbfe;
         margin-top: 24px;
-
+        @media screen and (max-width: 768px) {
+          margin-top: 40px;
+          padding: 50px 20px 20px 20px;
+        }
         p {
           font-size: 14px;
-          padding-right: 150px;
+          padding-right: 175px;
           line-height: 1.6em;
           color: #222;
+          @media screen and (max-width: 768px) {
+            padding-right: 0;
+          }
           & + p {
             padding-right: 0;
             margin-top: 15px;
@@ -75,8 +120,26 @@
           position: absolute;
           border: 2px solid #e8e8e8;
           background: #fff;
+          text-align: center;
+          @media screen and (max-width: 1280px) {
+            padding: 6px 20px;
+          }
+          @media screen and (max-width: 768px) {
+            padding: 10px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 100px;
+            top: -28px;
+          }
           img {
             width: 100px;
+            @media screen and (max-width: 1280px) {
+              width: 80px;
+            }
+            @media screen and (max-width: 768px) {
+              width: 60px;
+            }
           }
         }
       }
@@ -87,6 +150,9 @@
         display: block;
         margin: 37px 0 35px;
         color: #2d2a6a;
+        @media screen and (max-width: 768px) {
+          font-size: 20px;
+        }
       }
     }
   }
@@ -101,6 +167,9 @@
       font-size: 24px;
       position: relative;
       margin: 0 0 38px 0;
+      @media screen and (max-width: 768px) {
+        font-size: 20px;
+      }
       &:after {
         content: "";
         position: absolute;
