--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -7,7 +7,7 @@ $border-size: 1px;
   > .container {
   }
   .top-panel {
-    background: url(../img/abcompany.png);
+    background: url(../img/abcompany.jpg);
     &__title {
       &--img {
         position: relative;
@@ -100,7 +100,7 @@ $border-size: 1px;
 
   .mission {
     width: 100%;
-    background: url(../img/abcompanysky.png) no-repeat;
+    background: url(../img/abcompanysky.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     padding: 103px 0 84px;
