--- a/scss/career-page.scss
+++ b/scss/career-page.scss
@@ -4,7 +4,7 @@
   // align-items: center;
   // justify-content: center;
   .top-panel {
-    background: url(../img/careerblue.png);
+    background: url(../img/careerblue.jpg);
     padding: 46px 0 47px;
   }
   .bottom-panel {
@@ -226,7 +226,7 @@
 
   .application {
     width: 100%;
-    background: url(../img/career-bg.png) no-repeat;
+    background: url(../img/career-bg.jpg) no-repeat;
     background-size: cover;
     padding: 64px 0 71px 0;
     // margin-top: 56px;
