--- a/scss/contacts-page.scss
+++ b/scss/contacts-page.scss
@@ -4,7 +4,7 @@
   // align-items: center;
   // justify-content: center;
   .top-panel {
-    background: url(../img/contactblue.png);
+    background: url(../img/contactblue.jpg);
     padding: 46px 0 47px;
 
     &__title {
