--- a/scss/products-page.scss
+++ b/scss/products-page.scss
@@ -4,7 +4,7 @@
   // align-items: center;
   // justify-content: center;
   .top-panel {
-    background: url(../img/contactblue.png);
+    background: url(../img/contactblue.jpg);
     padding: 46px 0 47px;
   }
   .bottom-panel {
@@ -160,7 +160,7 @@
         }
       }
       &:nth-child(2) {
-        background: url(../img/ownblue1.png) no-repeat;
+        background: url(../img/ownblue1.jpg) no-repeat;
         background-position: center;
         width: 34%;
         padding: 0 60px;
@@ -176,15 +176,15 @@
         }
       }
       &:nth-child(4) {
-        background: url(../img/ownblue2.png) no-repeat;
+        background: url(../img/ownblue2.jpg) no-repeat;
         background-position: center;
       }
       &:nth-child(5) {
-        background: url(../img/ownblue3.png) no-repeat;
+        background: url(../img/ownblue3.jpg) no-repeat;
         background-position: center;
       }
       &:nth-child(7) {
-        background: url(../img/ownblue4.png) no-repeat;
+        background: url(../img/ownblue4.jpg) no-repeat;
         background-position: center;
         width: 34%;
         padding: 0 60px;
@@ -200,7 +200,7 @@
         }
       }
       &:nth-child(10) {
-        background: url(../img/ownblue5.png) no-repeat;
+        background: url(../img/ownblue5.jpg) no-repeat;
         background-position: center;
         width: 34%;
         padding: 0 60px;
@@ -216,7 +216,7 @@
         }
       }
       &:nth-child(12) {
-        background: url(../img/ownblue6.png) no-repeat;
+        background: url(../img/ownblue6.jpg) no-repeat;
         background-position: center;
       }
     }
