--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   align-items: center;
   .top-panel {
-    background: url(../img/distblue.png);
+    background: url(../img/distblue.jpg);
     padding: 55px 0 58px;
         
     &__title {
@@ -13,7 +13,6 @@
         top: -9px;
         left: 17px;
          > div:first-child {
-          // background: url(../img/mass-production.png) ;
           background: url(../img/animation/botl/mass-production-1.svg) ;
           background-repeat: repeat-x;
           // background-size: cover;
