--- a/scss/products-import-page.scss
+++ b/scss/products-import-page.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   .top-panel {
-    background: url(../img/distblue.png);
+    background: url(../img/distblue.jpg);
     padding: 46px 0 47px;
   }
   .bottom-panel {
@@ -26,7 +26,7 @@
       height: 100%;
       width: 300px;
       top: 0;
-      @media screen and (max-width: 1440px) {
+      @media screen and (max-width: 1820px) {
        display: none;
       }
     }
@@ -257,6 +257,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 
     &:hover {
       transform: scale(1.15);
@@ -270,6 +271,9 @@
     left: -16px;
     font-size: 0;
     background: none;
+    @media screen and (max-width: 768px) {
+      left: 0;
+    }
     &:after {
       content: "";
       border: solid #b9b7ce;
@@ -288,6 +292,9 @@
     right: -16px;
     font-size: 0;
     background: none;
+    @media screen and (max-width: 768px) {
+      right: 0;
+    }
     &:after {
       content: "";
       border: solid #b9b7ce;
