--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -12,6 +12,9 @@
         display: inline-block;
         top: -9px;
         left: 17px;
+        @media screen and (max-width: 768px) {
+          top: 3px;
+        }
          > div:first-child {
           background: url(../img/animation/botl/mass-production-1.svg) ;
           background-repeat: repeat-x;
@@ -22,7 +25,13 @@
           animation: 5s bgAnim linear infinite;
           background-position: 0 0;
           top: -41px;
-          left: 7px
+          left: 7px;
+          @media screen and (max-width: 768px) {
+            width: 50px;
+            height: 38px;
+            left: 3px;
+            animation: 5s bgAnimMob linear infinite;
+          }
          }
          > div:last-child {
           background: url(../img/animation/botl/mass-production.svg);
@@ -32,6 +41,11 @@
           position: absolute;
           background-position: 0 0;
           top: 10px;
+          @media screen and (max-width: 768px) {
+            width: 59px;
+            height: 38px;
+            top: -7px;
+          }
          }
       }
     }
@@ -44,10 +58,30 @@
     width: 100%;
     display: flex;
     background: #f4f4fd;
+    flex-wrap: wrap;
     &__image {
       width: calc(66% + 5px);
       position: relative;
       overflow: hidden;
+      @media screen and (max-width: 1280px) {
+        width: 100%;
+      }
+      &:before {
+        content: '';
+        width: 100%;
+        position: absolute;
+        height: 100px;
+        left: 0;
+        bottom: 0;
+        background: rgba(248,80,50,0);
+        background: -moz-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(248,80,50,0)), color-stop(100%, rgba(244,244,253,1)));
+        background: -webkit-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
+        background: -o-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
+        background: -ms-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
+        background: linear-gradient(to bottom, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#f4f4fd', GradientType=0 );
+      }
       &:after {
         content: '';
         height: 100%;
@@ -67,7 +101,7 @@
       img, svg {
         width: 100%;
         object-fit: cover;
-        height: 873px;
+        // height: 873px;
         display: block;
       }
       svg {
@@ -99,18 +133,42 @@
     }
     &__info {
       width: calc(34% - 5px);
+      // min-width: 635px;
       display: flex;
       align-content: center;
       flex-wrap: wrap;
       padding-bottom: 30px;
+      @media screen and (max-width: 1280px) {
+        width: 100%;
+        padding: 40px;
+        text-align: center;
+      }
+      @media screen and (max-width: 768px) {
+        padding: 20px;
+      }
       &-buttons {
         width: 100%;
         a {
+          display: inline-block;
+          @media screen and (max-width: 768px) {
+            display: block;
+            margin: 10px 0;
+          }
           &:first-child .btn{
             width: 250px;
+            margin-bottom: 10px;
+            @media screen and (max-width: 768px) {
+              font-size: 16px;
+              padding: 15px;
+            }
           }
           &:last-child .btn{
             width: 200px;
+            @media screen and (max-width: 768px) {
+              font-size: 16px;    
+              width: 250px;
+              padding: 15px;
+            }
           }
         }
         .btn {
@@ -124,6 +182,9 @@
         width: 100%;
         margin-top: 58px;
         margin-bottom: 10px;
+        @media screen and (max-width: 768px) {
+          margin-top: 20px;
+        }
          & ~ .map__info-title{
            margin-top: 51px;
          }
@@ -132,10 +193,21 @@
         width: 100%;
         max-width: 420px;
         line-height: 1.5em;
+        @media screen and (max-width: 1280px) {
+          max-width: 100%; 
+        }
       }
       ul {
         width: 100%;
         margin-top: 2px;
+        @media screen and (max-width: 1280px) {
+          width: 400px;
+          margin: auto;
+          text-align: left;
+        }
+        @media screen and (max-width: 480px) {
+          width: 100%;
+        }
         li {
           position: relative;
           margin-bottom: 24px;
@@ -143,11 +215,15 @@
           align-items: flex-start;
           width: 400px;
           line-height: 1.5em;
+          @media screen and (max-width: 1280px) {
+            width: 100%;
+          }
           &:before {
             content: '';
             background: #2c256b;
             width: 11px;
             height: 11px;
+            min-width: 11px;
             margin-right: 20px;
             margin-top: 5px;
             display: block;
@@ -162,6 +238,10 @@
     color: #bcbbcb;
     padding: 57px 0 50px 0;
     line-height: 1.5em;
+    @media screen and (max-width: 768px) {
+      font-size: 14px;
+      padding: 35px 0 30px 0;
+    }
   }
 }
 
@@ -175,6 +255,19 @@
   100% {
   
     background-position: 74px 0;
+  }
+}
+
+
+@keyframes bgAnimMob {
+  0% {
+
+    background-position: 0 0;
+  }
+
+  100% {
+  
+    background-position: 50px 0;
   }
 }
 
