--- a/scss/header.scss
+++ b/scss/header.scss
@@ -16,14 +16,6 @@ header {
     }
   }
 
-  // .header-shadow {
-  //   width: 100%;
-  //   top: 113px;
-  //   position: absolute;
-  //   z-index: -1;
-  //   height: 10px;
-  //   box-shadow: 0 0 5px -2px #000;
-  // }
   .header-panel {
     position: absolute;
     width: 100%;
@@ -55,7 +47,7 @@ header {
     &__left {
       width: 225px;
       @media screen and (max-width: 1600px) {
-        width: 200px;     
+        width: 200px;
       }
       @media screen and (max-width: 1280px) {
         width: 180px;
@@ -83,7 +75,7 @@ header {
         top: -9px;
         @media screen and (max-width: 1024px) {
           width: 126px;
-           top: 0;
+          top: 0;
         }
         @media screen and (max-width: 768px) {
           width: 90px;
@@ -103,10 +95,10 @@ header {
         right: 50px;
       }
       @media screen and (max-width: 1024px) {
-        right: 40px;
+        right: 80px;
       }
       @media screen and (max-width: 768px) {
-        right: 20px;
+        right: 70px;
       }
       &.opened {
         .language__list {
@@ -132,7 +124,7 @@ header {
         }
         &:after {
           position: relative;
-          z-index: 10 ;
+          z-index: 10;
           content: "";
           margin-top: -4px;
           margin-left: 6px;
@@ -152,14 +144,14 @@ header {
         opacity: 0;
         visibility: hidden;
         top: -12px;
-        
-        transition: .2s;
-        right:-10px;
+
+        transition: 0.2s;
+        right: -10px;
         box-shadow: 0 0px 15px -10px #000;
         // margin: auto;
         width: 70px;
         @media screen and (max-width: 768px) {
-          right:-12px;;
+          right: -12px;
         }
         li {
           padding: 15px;
@@ -183,7 +175,7 @@ header {
   nav {
     height: 100%;
     @media screen and (max-width: 1024px) {
-        display: none;
+      display: none;
     }
     > ul {
       display: flex;
@@ -249,10 +241,10 @@ header {
           display: block;
           position: relative;
           @media screen and (max-width: 1600px) {
-              padding: 0 20px;
+            padding: 0 20px;
           }
           @media screen and (max-width: 1280px) {
-            padding:  0 16px;
+            padding: 0 16px;
             font-size: 14px;
           }
           span {
@@ -297,523 +289,206 @@ header {
       }
     }
   }
+
+
+  .socials {
+    display: inline-flex;
+    // flex-wrap: wrap;
+    justify-content: space-between;
+    &__item {
+      width: 46px;
+      height: 46px;
+      background: #2c256c;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 16px;
+      margin: 24px 7px 20px 7px;
+      img {
+        transition: 0.1s;
+      }
+      &:hover {
+        img {
+          transform: scale(1.08);
+        }
+      }
+
+      &:first-child img {
+        width: 21px;
+      }
+      &:last-child img {
+        width: 30px;
+        margin-top: 1px;
+      }
+    }
+  }
+
 }
 
-// header {
-//   position: fixed;
-//   width: 100%;
-//   height: 80px;
-//   transition: 0.2s;
-//   z-index: 999;
+.burger {
+  display: none;
+  width: 40px;
+  height: 30px;
+  position: absolute;
+  right: 20px;
+  z-index: 10;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  cursor: pointer;
+  margin-left: 0px;
+  margin-top: 6px;
 
-//   @media screen and (max-width: 1280px) {
-//   }
+  @media screen and(max-width: 1024px) {
+    display: block;
+  }
 
-//   @media screen and (max-width: 720px) {
-//     height: 60px;
-//   }
+  @media screen and(max-width: 768px) {
+    width: 30px;
+    margin-top: 3px;
+  }
 
-//   @media screen and (max-width: 1280px) {
-//     background: #000;
-//   }
+  &.opened {
+    span {
+      background: none;
 
-//   .btn {
-//     @media screen and (max-width: 720px) {
-//       font-size: 14px;
-//       height: 42px;
-//       width: 140px;
-//     }
+      &:before {
+        top: 0px;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
 
-//     @media screen and (max-width: 480px) {
-//       background: none;
-//       width: auto;
-//       color: #fff;
-//       padding: 0;
-//       &:hover {
-//         background: none;
-//       }
-//     }
-//     @media screen and (max-width: 375px) {
-//       font-size: 12px;
-//     }
-//   }
+      &:after {
+        top: 0px;
+        -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+      }
+    }
+  }
 
-//   &.fixed {
-//     box-shadow: 0 0 20px -5px #000;
-//     background: #000;
-//   }
+  span {
+    position: relative;
+    width: 100%;
+    height: 2px;
+    display: inline-block;
+    background: #a40c0f;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
 
-//   .container {
-//     max-width: 1260px;
-//     display: flex;
-//     height: 100%;
-//     justify-content: space-between;
-//     align-items: center;
-//       position: relative;
-//   }
+    &:before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: #a40c0f;
+      position: absolute;
+      left: 0;
+      top: -11px;
+      -webkit-transition: all 0.2s linear;
+      -moz-transition: all 0.2s linear;
+      -ms-transition: all 0.2s linear;
+      -o-transition: all 0.2s linear;
+      transition: all 0.2s linear;
+      @media screen and(max-width: 768px) {
+        top: -9px;
+      }
+    }
 
-//   .logo {
-//     @media screen and (max-width: 1280px) {
-//       position: absolute;
-//       left: 0;
-//       right: 0;
-//       margin: auto;
-//       width: 215px;
+    &:after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: #a40c0f;
+      position: absolute;
+      left: 0;
+      top: 11px;
+      -webkit-transition: all 0.2s linear;
+      -moz-transition: all 0.2s linear;
+      -ms-transition: all 0.2s linear;
+      -o-transition: all 0.2s linear;
+      transition: all 0.2s linear;
+      @media screen and(max-width: 768px) {
+        top: 9px;
+      }
+    }
+  }
+}
 
-//       img:first-child {
-//         width: 65px;
-//       }
-//       img:last-child {
-//         width: 140px;
-//       }
-//     }
+.dropdown-menu {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  width: 100%;
+  background: #fff;
+  padding: 20px;
+  left: 0;
+  top: 0px;
+  transition: 0.2s;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+  text-align: center;
+  will-change: transform;
+  z-index: -1;
 
-//     @media screen and (max-width: 720px) {
-//       width: 170px;
-//       @media screen and (max-width: 375px) {
-//         width: 144px;
-//       }
-//       img:first-child {
-//         width: 45px;
-//       }
-//       img:last-child {
-//         width: 120px;
-//         @media screen and (max-width: 375px) {
-//             width: 90px;
-//         }
-//       }
-//     }
+  @media screen and (min-width: 1024px) {
+    display: none;
+  }
 
-//     @media screen and (max-width: 480px) {
-//     }
-//   }
+  &.opened {
+    opacity: 1;
+    visibility: visible;
+    top: 80px;
 
-//   .right {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     width: 230px;
+    @media screen and (max-width: 768px) {
+      top: 60px;
+    }
+  }
 
-//     &.unauthorized {
-//       justify-content: flex-end;
-//     }
-//     &.authorized {
-//       @media screen and (max-width: 1280px) {
-//         justify-content: flex-end;
-//       }
-//       @media screen and (max-width: 720px) {
-//       }
-//       @media screen and (max-width: 600px) {
-//         width: 50px;
+  .btn {
+    display: none;
+    @media screen and (max-width: 480px) {
+      display: block;
+      margin: 0 auto 20px;
+    }
+  }
 
-//         .user-name__close {
-//           margin-left: 0;
-//           display: none;
-//         }
-//         .user-name {
-//           padding: 0;
-//           font-size: 0;
-//         }
-//       }
-//       &:hover {
-//         .user-dropdown {
-//           opacity: 1;
-//           visibility: visible;
-//         }
-//       }
-//     }
-//     .user-name {
-//       color: #fff;
-//       display: flex;
-//       padding-left: 40px;
-//       align-items: center;
-//       img {
-//         margin-right: 10px;
-//       }
-//       &__close {
-//         margin-top: 2px;
-//         cursor: pointer;
-//         margin-left: 60px;
-//       }
-//     }
-//     .user-dropdown {
-//       transition: 0.3s;
-//       opacity: 0;
-//       visibility: hidden;
-//       position: absolute;
-//       background: #fff;
-//       border-radius: 5px;
-//       right: 76px;
-//       padding: 1px 0 12px 0;
-//       top: 65px;
-//       width: 200px;
-//       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
-//       @media screen and (max-width: 1280px) {
-//         left: auto;
-//         right: 50px;
-//       }
-//       @media screen and (max-width: 600px) {
-//         right: 20px;
-//         left: auto;
-//       }
-//       @media screen and (max-width: 480px) {
-//         width: 100%;
-//         left:0;
-//         right: auto;
-//         top: 60px;
-//         border-radius: 0px 0px 5px 5px;
-//         padding: 20px 0;
-//         &:after {
-//           content: "";
-//           width: 0;
-//           height: 0;
-//           border-left: 10px solid transparent;
-//           border-right: 10px solid transparent;
-//           border-bottom: 10px solid #fff;
-//           position: absolute;
-//           top: -10px;
-//           right: 50px;
-//         }
-//       }
-//       &:after {
-//         content: "";
-//         height: 10px;
-//         top: -10px;
-//         width: 100%;
-//         position: absolute;
-//       }
-//       &__item {
-//         font-size: 14px;
-//         padding: 5px 30px;
-//         color: #545454;
-//         @media screen and (max-width: 480px) {
-//           text-align: center;
-//           padding: 20px 20px;
-//           font-weight: 600;
-//         }
-//         &:hover {
-//           // text-decoration: underline;
-//           cursor: pointer;
-//           color: #067eff;
-//           &:after {
-//             margin: 8px auto 0;
-//             display: block;
-//             content: "";
-//             left: 0;
-//             height: 1px;
-//             background: #f9e107;
-//             border-radius: 2px;
-//             width: 80px;
-//             position: absolute;
-//             @media screen and (max-width: 480px) {
-//               left:0;
-//               right:0;
-//               height: 2px;
-//             }
-//           }
-//         }
-//         &:first-child {
+  nav {
+    width: 100%;
+    padding: 0;
+    @media screen and (max-width: 1024px) {
+      display: block;
+    }
 
-//           padding: 5px 30px 8px 0px;
-//           padding-left: 40px;
-//           position: relative;
-//           @media screen and (max-width: 480px) {
-//             padding: 20px 20px;
-//           }
-
-//         }
-//       }
-//     }
-//   }
-
-//   nav {
-//     width: calc(100% - 230px - 230px);
-//     height: 100%;
-
-//     @media screen and (max-width: 1280px) {
-//       display: none;
-//     }
-
-//     ul {
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       height: 100%;
-
-//       li {
-//         font-size: 14px;
-//         font-weight: 500;
-//         height: 100%;
-
-//         a {
-//           padding: 0 16px;
-//           color: #fff;
-//           // position: relative;
-//           transition: 0.2s;
-//           font-size: 17px;
-//           letter-spacing: 1px;
-//           height: 100%;
-//           display: flex;
-//           align-items: center;
-//           text-align: center;
-
-//           // @media screen and (max-width: 1600px) {
-//           //     padding: 0 20px;
-//           // }
-
-//           span {
-//             position: relative;
-
-//             &:after {
-//               content: "";
-//               height: 4px;
-//               background: #067eff;
-//               border-radius: 2px;
-//               width: 70%;
-//               position: absolute;
-//               // bottom: 0;
-//               bottom: -12px; //calc(50% - 10px);
-//               left: 0;
-//               opacity: 0;
-//               visibility: hidden;
-//               transition: 0.2s;
-//             }
-//           }
-
-//           &:hover {
-//             // color: $c-light-blue;
-//             span:after {
-//               opacity: 1;
-//               visibility: visible;
-//             }
-//           }
-
-//           &.active {
-//             // color: $c-light-blue;
-
-//             span:after {
-//               opacity: 1;
-//               visibility: visible;
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-
-//   .burger {
-//     display: none;
-//     width: 40px;
-//     height: 30px;
-//     position: static;
-//     z-index: 10;
-//     -webkit-transition: all 0.2s linear;
-//     -o-transition: all 0.2s linear;
-//     transition: all 0.2s linear;
-//     cursor: pointer;
-//     margin-left: 0px;
-//     margin-top: 6px;
-
-//     @media screen and(max-width: 1280px) {
-//       display: block;
-//     }
-
-//     @media screen and(max-width: 720px) {
-//       width: 30px;
-//     }
-
-//     &.opened {
-//       span {
-//         background: none;
-
-//         &:before {
-//           top: 0px;
-//           -webkit-transform: rotate(45deg);
-//           -ms-transform: rotate(45deg);
-//           -o-transform: rotate(45deg);
-//           transform: rotate(45deg);
-//         }
-
-//         &:after {
-//           top: 0px;
-//           -webkit-transform: rotate(-45deg);
-//           -ms-transform: rotate(-45deg);
-//           -o-transform: rotate(-45deg);
-//           transform: rotate(-45deg);
-//         }
-//       }
-//     }
-
-//     span {
-//       position: relative;
-//       width: 100%;
-//       height: 2px;
-//       display: inline-block;
-//       background: #fff;
-//       -webkit-transform: translateY(-50%);
-//       -ms-transform: translateY(-50%);
-//       -o-transform: translateY(-50%);
-//       transform: translateY(-50%);
-//       -webkit-transition: all 0.2s linear;
-//       -moz-transition: all 0.2s linear;
-//       -ms-transition: all 0.2s linear;
-//       -o-transition: all 0.2s linear;
-//       transition: all 0.2s linear;
-
-//       &:before {
-//         content: "";
-//         display: block;
-//         width: 100%;
-//         height: 2px;
-//         background: #fff;
-//         position: absolute;
-//         left: 0;
-//         top: -11px;
-//         -webkit-transition: all 0.2s linear;
-//         -moz-transition: all 0.2s linear;
-//         -ms-transition: all 0.2s linear;
-//         -o-transition: all 0.2s linear;
-//         transition: all 0.2s linear;
-//         @media screen and(max-width: 720px) {
-//           top: -9px;
-//         }
-//       }
-
-//       &:after {
-//         content: "";
-//         display: block;
-//         width: 100%;
-//         height: 2px;
-//         background: #fff;
-//         position: absolute;
-//         left: 0;
-//         top: 11px;
-//         -webkit-transition: all 0.2s linear;
-//         -moz-transition: all 0.2s linear;
-//         -ms-transition: all 0.2s linear;
-//         -o-transition: all 0.2s linear;
-//         transition: all 0.2s linear;
-//         @media screen and(max-width: 720px) {
-//           top: 9px;
-//         }
-//       }
-//     }
-//   }
-
-//   .dropdown-menu {
-//     opacity: 0;
-//     visibility: hidden;
-//     position: absolute;
-//     width: 100%;
-//     background: #fff;
-//     padding: 20px;
-//     left: 0;
-//     top: 0px;
-//     transition: 0.2s;
-//     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-//     border-radius: 0 0 6px 6px;
-//     will-change: transform;
-
-//     &:after {
-//       content: "";
-//       width: 0;
-//       height: 0;
-//       border-left: 10px solid transparent;
-//       border-right: 10px solid transparent;
-//       border-bottom: 10px solid #fff;
-//       position: absolute;
-//       top: -10px;
-//       left: 50px;
-//       @media screen and (max-width: 720px) {
-//         left: 45px;
-//       }
-//       @media screen and (max-width: 600px) {
-//         left: 25px;
-//       }
-
-//     }
-
-//     // .right.authorized,
-//     // .right.unauthorized {
-//     //     display: none;
-//     //   @media screen and (max-width: 480px) {
-//     //     display: flex;
-//     //     justify-content: center;
-//     //     width: 100%;
-//     //     margin-bottom: 20px;
-//     //   }
-//     //   .user-name__close {
-//     //     display: none;
-//     //     // @media screen and (max-width: 480px) {
-//     //     //   margin-left: 20px;
-//     //     //   margin-top: 4px;
-//     //     // }
-//     //   }
-//     //   .user-name {
-//     //     img {
-//     //       display: none;
-//     //     }
-//     //     // @media screen and (max-width: 480px) {
-//     //     //   padding-left: 0;
-//     //     //   font-size: 16px;
-//     //     // }
-//     //   }
-//     // }
-
-//     @media screen and (min-width: 1280px) {
-//       display: none;
-//     }
-
-//     &.opened {
-//       opacity: 1;
-//       visibility: visible;
-//       top: 80px;
-
-//       @media screen and (max-width: 720px) {
-//         top: 60px;
-//       }
-//     }
-
-//     .btn {
-//       display: none;
-//       @media screen and (max-width: 480px) {
-//         display: block;
-//         margin: 0 auto 20px;
-//       }
-//     }
-
-//     nav {
-//       width: 100%;
-//       padding: 0;
-//       @media screen and (max-width: 1280px) {
-//         display: block;
-//       }
-
-//       ul {
-//         flex-wrap: wrap;
-
-//         li {
-//           width: 100%;
-
-//           a {
-//             padding: 14px;
-//             display: block;
-//             text-align: center;
-//             color: #545454;
-//             @media screen and (max-width: 480px) {
-//               font-size: 14px;
-//             }
-//             span {
-//                 &:after{
-//                     width: 100%;
-//                     @media screen and (max-width: 480px) {
-//                       height: 2px;
-//                     }
-//                 }
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
+    ul {
+      display: block;
+      li {
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        a {
+          padding: 14px 0;
+          @media screen and (max-width: 480px) {
+            font-size: 14px;
+          }
+          span {
+            padding: 0;
+            &:after {
+              bottom: -5px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
