--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -119,6 +119,7 @@
         object-fit: cover;
         // height: 873px;
         display: block;
+        z-index: 1;
       }
       svg {
        
