--- a/scss/header.scss
+++ b/scss/header.scss
@@ -68,6 +68,7 @@ header {
       width: 100px;
       position: relative;
       display: block;
+      user-select: none;
       img {
         width: 180px;
         // left: -47px;
