--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -167,6 +167,9 @@
         width: 100%;
         a {
           display: inline-block;
+          @media screen and (max-width: 1440px) {
+            display: block;
+          }
           @media screen and (max-width: 768px) {
             display: block;
             margin: 10px 0;
@@ -181,6 +184,9 @@
           }
           &:last-child .btn{
             width: 200px;
+             @media screen and (max-width: 1440px) {
+              width: 250px;
+             }
             @media screen and (max-width: 768px) {
               font-size: 16px;    
               width: 250px;
