--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -48,6 +48,9 @@
     }
     .container {
       padding: 100px 54px 0;
+      @media screen and (max-width: 1280px) {
+        padding: 100px 30px 0;
+      }
       @media screen and (max-width: 1024px) {
         padding: 100px 30px 0;
       }
@@ -64,14 +67,17 @@
       @media screen and (max-width: 1600px) {
         font-size: 68px;
       }
+      @media screen and (max-width: 1440px) {
+        font-size: 60px;
+      }
       @media screen and (max-width: 1280px) {
-        font-size: 54px;
+        font-size: 50px;
       }
       @media screen and (max-width: 1024px) {
-        font-size: 48px;
+        font-size: 44px;
       }
       @media screen and (max-width: 768px) {
-        font-size: 42px;
+        font-size: 40px;
       }
       @media screen and (max-width: 480px) {
         text-align: center;
@@ -89,9 +95,13 @@
 
         @media screen and (max-width: 1600px) {
           line-height: 1.2em;
+          font-size: 40px;
+        }
+        @media screen and (max-width: 1440px) {
+          font-size: 38px;
         }
         @media screen and (max-width: 1280px) {
-          font-size: 40px;
+          font-size: 36px;
         }
         @media screen and (max-width: 1024px) {
           font-size: 32px;
@@ -126,16 +136,19 @@
       align-items: flex-end;
       letter-spacing: 0.4px;
       @media screen and (max-width: 1600px) {
-        font-size: 32px;
-      }
-      @media screen and (max-width: 1280px) {
         font-size: 30px;
       }
-      @media screen and (max-width: 1024px) {
+      @media screen and (max-width: 1440px) {
         font-size: 28px;
       }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 1280px) {
+        font-size: 26px;
+      }
+      @media screen and (max-width: 1024px) {
         font-size: 24px;
+      }
+      @media screen and (max-width: 768px) {
+        font-size: 22px;
       }
       @media screen and (max-width: 480px) {
         text-align: center;
