--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -116,6 +116,7 @@
       }
       img, svg {
         width: 100%;
+        height: 100%;
         object-fit: cover;
         // height: 873px;
         display: block;
@@ -149,12 +150,19 @@
       }
     }
     &__info {
+      // width: calc(34% - 5px);
+      // // min-width: 635px;
+      // display: flex;
+      // align-content: center;
+      // flex-wrap: wrap;
+      // padding-bottom: 30px;
       width: calc(34% - 5px);
-      // min-width: 635px;
       display: flex;
-      align-content: center;
+      align-content: flex-start;
       flex-wrap: wrap;
-      padding-bottom: 30px;
+      /* padding-bottom: 30px; */
+      padding-top: 7%;
+
       @media screen and (max-width: 1280px) {
         width: 100%;
         padding: 40px;
