--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -48,6 +48,11 @@
     }
     .container {
       padding: 100px 54px 0;
+      @media screen and (max-width: 1440px) {
+        @media screen and (max-height: 800px) {
+           padding: 80px 54px 0;
+        }
+      }
       @media screen and (max-width: 1280px) {
         padding: 100px 30px 0;
       }
@@ -69,6 +74,9 @@
       }
       @media screen and (max-width: 1440px) {
         font-size: 60px;
+        @media screen and (max-height: 800px) {
+            font-size: 42px;
+        }
       }
       @media screen and (max-width: 1280px) {
         font-size: 50px;
@@ -98,13 +106,16 @@
           font-size: 40px;
         }
         @media screen and (max-width: 1440px) {
-          font-size: 38px;
+          font-size: 34px;
+          @media screen and (max-height: 800px) {
+              font-size: 24px;
+          }
         }
         @media screen and (max-width: 1280px) {
-          font-size: 36px;
+          font-size: 32px;
         }
         @media screen and (max-width: 1024px) {
-          font-size: 32px;
+          font-size: 30px;
         }
         @media screen and (max-width: 768px) {
           font-size: 28px;
@@ -117,6 +128,7 @@
         @media screen and (max-width: 360px) {
           font-size: 22px;
         }
+
         &:after {
           content: "";
           height: 3px;
@@ -124,6 +136,11 @@
           background: #db272f;
           display: block;
           margin: 11px 0px 25px 0;
+          @media screen and (max-width: 1440px) {
+            @media screen and (max-height: 800px) {
+              margin: 10px 0px 18px 0;
+            }
+          }
           @media screen and (max-width: 480px) {
             margin: 10px auto;
           }
@@ -140,6 +157,9 @@
       }
       @media screen and (max-width: 1440px) {
         font-size: 28px;
+        @media screen and (max-height: 800px) {
+          font-size: 20px;
+        }
       }
       @media screen and (max-width: 1280px) {
         font-size: 26px;
@@ -168,6 +188,12 @@
         display: block;
         letter-spacing: 0.4px;
         margin-bottom: 6px;
+        @media screen and (max-width: 1440px) {
+          @media screen and (max-height: 800px) {
+           width: 22px;
+           height: 55px;
+          }
+        }
         @media screen and (max-width: 768px) {
           width: 27px;
           height: 78px;
@@ -182,6 +208,13 @@
       font-size: 16px;
       width: 70%;
       line-height: 1.5em;
+      @media screen and (max-width: 1440px) {
+   
+        @media screen and (max-height: 800px) {
+            font-size: 13px;
+            line-height: 1.3em;
+        }
+      }
       @media screen and (max-width: 1024px) {
         font-size: 14px;
       }
@@ -195,6 +228,14 @@
     }
     .btn {
       margin-top: 40px;
+      @media screen and (max-width: 1440px) {
+      
+        @media screen and (max-height: 800px) {
+          margin-top: 20px;
+          padding: 10px 60px 10px 20px;
+          font-size: 13px;
+        }
+      }
       @media screen and (max-width: 480px) {
         margin: 20px auto 10px;
         padding: 13px 80px 12px 25px;
