--- a/scss/header.scss
+++ b/scss/header.scss
@@ -25,6 +25,7 @@ header {
     background: #fff;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
     @media screen and (max-width: 1440px) {
       @media screen and (max-height: 800px) {
          top: 0px;
