--- a/scss/products-page.scss
+++ b/scss/products-page.scss
@@ -55,7 +55,7 @@
       width: calc(22%);
       height: 247px;
       color: #fff;
-      overflow: hidden;
+      // overflow: hidden;
       @media screen and (max-width: 1024px) {
         width: calc(100%/3);
         &:nth-child(1) {order: 1;}
@@ -110,6 +110,7 @@
       &--text {
         margin-top: -20px;
         width: 100%;
+        position: relative;
       }
       &:nth-child(2),
       &:nth-child(4),
@@ -122,7 +123,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        transition: 0.1s;
+        // transition: 0.1s;
         position: relative;
         img {
           width: 65px;
@@ -137,6 +138,8 @@
           height: 100%;
           display: block;
           margin: 0;
+          transition: 0.1s;
+          background-size: cover!important;
         }
         span {
           padding: 20px 0;
@@ -154,14 +157,17 @@
           }
         }
         &:hover {
-          // a {
+          z-index: 1;
+          a {
             transform: scale(1.02);
-          // }
+          }
         }
       }
       &:nth-child(2) {
-        background: url(../img/ownblue1.jpg) no-repeat;
-        background-position: center;
+        a {
+          background: url(../img/ownblue1.jpg) no-repeat;
+          background-position: center;
+        }
         width: 34%;
         padding: 0 60px;
         @media screen and (max-width: 1024px) {
@@ -176,16 +182,22 @@
         }
       }
       &:nth-child(4) {
-        background: url(../img/ownblue2.jpg) no-repeat;
-        background-position: center;
+        a {
+          background: url(../img/ownblue2.jpg) no-repeat;
+          background-position: center;
+        }
       }
       &:nth-child(5) {
-        background: url(../img/ownblue3.jpg) no-repeat;
-        background-position: center;
+       a {
+          background: url(../img/ownblue3.jpg) no-repeat;
+          background-position: center;
+       }
       }
       &:nth-child(7) {
-        background: url(../img/ownblue4.jpg) no-repeat;
-        background-position: center;
+        a {
+          background: url(../img/ownblue4.jpg) no-repeat;
+          background-position: center;
+        }
         width: 34%;
         padding: 0 60px;
         @media screen and (max-width: 1024px) {
@@ -200,8 +212,10 @@
         }
       }
       &:nth-child(10) {
-        background: url(../img/ownblue5.jpg) no-repeat;
-        background-position: center;
+        a {
+          background: url(../img/ownblue5.jpg) no-repeat;
+          background-position: center;
+        }
         width: 34%;
         padding: 0 60px;
         @media screen and (max-width: 1024px) {
@@ -216,8 +230,10 @@
         }
       }
       &:nth-child(12) {
-        background: url(../img/ownblue6.jpg) no-repeat;
-        background-position: center;
+        a {
+          background: url(../img/ownblue6.jpg) no-repeat;
+          background-position: center;
+        }
       }
     }
   }
