--- a/scss/header.scss
+++ b/scss/header.scss
@@ -108,10 +108,10 @@ header {
         right: 50px;
       }
       @media screen and (max-width: 1024px) {
-        right: 80px;
+        right: 100px;
       }
       @media screen and (max-width: 768px) {
-        right: 70px;
+        right: 80px;
       }
       &.opened {
         .language__list {
@@ -136,18 +136,25 @@ header {
           font-size: 14px;
         }
         &:after {
-          position: relative;
+          position: absolute;
           z-index: 10;
           content: "";
-          margin-top: -4px;
-          margin-left: 6px;
           border: solid #2c256b;
           border-width: 0 1px 1px 0;
           display: inline-block;
           padding: 3px;
           transform: rotate(45deg);
           -webkit-transform: rotate(45deg);
-          transition: 0.1s;
+          transition: .1s;
+          right: -13px;
+          top: -7px;
+          bottom: 0;
+          margin: auto;
+          width: 0px;
+          height: 0px;
+           // @media screen and (max-width: 768px) {
+           //  right:-5px;
+           // }
         }
       }
       &__list {
@@ -157,22 +164,30 @@ header {
         opacity: 0;
         visibility: hidden;
         top: -12px;
-
-        transition: 0.2s;
-        right: -10px;
-        box-shadow: 0 0px 15px -10px #000;
-        // margin: auto;
+        transition: .2s;
+        right: -19px;
+        box-shadow: 0 0 15px -10px #000;
         width: 70px;
         @media screen and (max-width: 768px) {
-          right: -12px;
+          right: -20px;
+          top: -14px;
         }
         li {
-          padding: 15px;
           transition: 0.2s;
           cursor: pointer;
           color: #2c256b;
           font-weight: 600;
           text-align: center;
+          height: 49px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          a {
+            color: #2c256b;
+            padding: 15px;
+            display: block;
+            width: 100%;
+          }
           @media screen and (max-width: 768px) {
             font-size: 14px;
           }
@@ -485,6 +500,11 @@ header {
 
     ul {
       display: block;
+
+
+      ul {
+        display: none;
+      }
       li {
         width: 100%;
         justify-content: center;
