--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -12,6 +12,9 @@
     background-position: center;
     height: calc(100% - 150px - 44px);
     @media screen and (max-width: 1024px) {
+      width: 50%;
+    }
+    @media screen and (max-width: 768px) {
       width: 40%;
     }
     @media screen and (max-width: 600px) {
@@ -34,6 +37,9 @@
     align-items: center;
     overflow: hidden;
     @media screen and (max-width: 1024px) {
+      width: 50%;
+    }
+    @media screen and (max-width: 768px) {
       width: 60%;
     }
     @media screen and (max-width: 600px) {
@@ -54,9 +60,12 @@
         }
       }
       @media screen and (max-width: 1280px) {
-        padding: 100px 30px 0;
+        padding: 100px 50px 0 40px;
       }
       @media screen and (max-width: 1024px) {
+        padding: 100px 40px 0;
+      }
+      @media screen and (max-width: 768px) {
         padding: 100px 30px 0;
       }
       @media screen and (max-width: 480px) {
@@ -82,10 +91,10 @@
         font-size: 50px;
       }
       @media screen and (max-width: 1024px) {
-        font-size: 44px;
+        font-size: 40px;
       }
       @media screen and (max-width: 768px) {
-        font-size: 40px;
+        font-size: 38px;
       }
       @media screen and (max-width: 480px) {
         text-align: center;
