--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -89,13 +89,13 @@
         height: 100px;
         left: 0;
         bottom: 0;
-        background: rgba(248,80,50,0);
-        background: -moz-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
-        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(248,80,50,0)), color-stop(100%, rgba(244,244,253,1)));
-        background: -webkit-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
-        background: -o-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
-        background: -ms-linear-gradient(top, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
-        background: linear-gradient(to bottom, rgba(248,80,50,0) 0%, rgba(244,244,253,1) 100%);
+        // background: rgba(248,80,50,0);
+        background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(244,244,253,1) 100%);
+        // background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(248,80,50,0)), color-stop(100%, rgba(244,244,253,1)));
+        background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(244,244,253,1) 100%);
+        background: -o-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(244,244,253,1) 100%);
+        background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(244,244,253,1) 100%);
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(244,244,253,1) 100%);
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#f4f4fd', GradientType=0 );
       }
       &:after {
