--- a/scss/header.scss
+++ b/scss/header.scss
@@ -503,16 +503,38 @@ header {
 
 
       ul {
-        display: none;
+        // display: none;
+        position: static;
+        width: 100%;
+        background: none;
+        box-shadow: none;
+        border: none;
+        position: static;
+        opacity: 1;
+        visibility: visible;
+        margin-bottom: 10px;
+        padding: 0;
+        li {
+          height: auto;
+          border-bottom: none!important;
+           a {
+            padding: 10px 0;
+            @media screen and (max-width: 480px) {
+              padding: 7px 0;
+            }
+           }
+        }
       }
       li {
         width: 100%;
         justify-content: center;
         display: flex;
+        flex-wrap: wrap;
         a {
           padding: 14px 0;
           @media screen and (max-width: 480px) {
             font-size: 14px;
+            padding: 10px 0;
           }
           span {
             padding: 0;
