--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -239,6 +239,7 @@ $border-size: 1px;
     padding: 32px 0 99px;
     border-bottom: 4px solid #f4f4fd;
     width: 100%;
+    overflow: hidden;
     @media screen and (max-width: 1024px) {
       padding: 0px 0 50px;
     }
@@ -255,6 +256,16 @@ $border-size: 1px;
       position: relative;
       font-size: 0;
       z-index: 1;
+      &[data-animate="true"] {
+          &:after {
+            top: 20px;
+            left: -20px;
+            @media screen and (max-width: 768px) {
+              left: -14px;
+              width: calc(100% + 20px);
+            }
+          }
+      }
       @media screen and (max-width: 768px) {
         width: 100%;
       }
@@ -262,14 +273,17 @@ $border-size: 1px;
         content: "";
         z-index: -1;
         position: absolute;
-        top: 20px;
-        left: -20px;
+        top: 0px;
+        left: 0px;
         width: calc(100% - 15px);
         height: calc(100% - 8px);
         border: 4px solid #e5e5ed;
+        transition: 1s;
         @media screen and (max-width: 768px) {
-          left: -14px;
-          width: calc(100% + 20px);
+          left: 0;
+          right: 0;
+          margin: auto;
+         width: 100%;
         }
       }
       img {
