--- a/scss/products-import-page.scss
+++ b/scss/products-import-page.scss
@@ -75,6 +75,9 @@
         font-size: 60px;
         font-weight: 600;
         color: #313131;
+         @media screen and (max-width: 1440px) {
+            font-size: 52px;
+         }
         @media screen and (max-width: 768px) {
           text-align: center;
           font-size: 48px;
@@ -88,6 +91,9 @@
         font-size: 36px;
         color: #313131;
         margin-top: 5px;
+        @media screen and (max-width: 1440px) {
+         font-size: 32px;
+        }
         @media screen and (max-width: 768px) {
           text-align: center;
           font-size: 30px;
@@ -141,6 +147,7 @@
           }
           img {
             width: 100px;
+            object-fit: contain;
             @media screen and (max-width: 1280px) {
               width: 80px;
             }
@@ -154,51 +161,73 @@
             background: #fbfbfe;
             border: 2px solid #e8e8e8;
           }
-
-          .socials {
-            display: inline-flex;
-            // flex-wrap: wrap;
-            justify-content: space-between;
-            &__item {
-              width: 30px;
-              height: 30px;
-              background: #2c256c;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              margin-bottom: 16px;
-              margin: 8px 4px 10px;
-              img {
-                transition: 0.1s;
-              }
-              &:hover {
-                background: darken(#2c256c, 10%);
-                img {
-                  transform: scale(1.08);
-                }
-              }
-
-              &:first-child img {
-                width: 17px;
-              }
-              &:last-child img {
-                width: 23px;
-                margin-top: 1px;
-              }
-            }
-          }
         }
       }
       &__link {
-        font-size: 24px;
         text-align: center;
-        text-decoration: underline;
-        display: block;
-        margin: 37px 0 35px;
-        color: #2d2a6a;
-        @media screen and (max-width: 768px) {
-          font-size: 20px;
+        a {
+          font-size: 24px;
+          text-align: center;
+          text-decoration: underline;
+          display: block;
+          margin: 37px 0 35px;
+          color: #2d2a6a;
+          @media screen and (max-width: 768px) {
+            font-size: 20px;
+          }
+          @media screen and (max-width: 480px) {
+           margin: 35px 0 8px;
+          }
         }
+
+        &__wrapper {
+          position: relative;
+          display: inline-block;
+        }
+
+        .socials {
+          display: inline-flex;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          margin: auto;
+          justify-content: space-between;
+          height: 40px;
+          left: calc(100% + 25px);
+          @media screen and (max-width: 480px) {
+            position: static;
+            margin-bottom: 30px;
+          }
+
+          &__item {
+            width: 30px;
+            height: 30px;
+            background: #2c256c;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 16px;
+            margin: 8px 4px 10px;
+            img {
+              transition: 0.1s;
+            }
+            &:hover {
+              background: darken(#2c256c, 10%);
+              img {
+                transform: scale(1.08);
+              }
+            }
+
+            &:first-child img {
+              width: 17px;
+            }
+            &:last-child img {
+              width: 23px;
+              margin-top: 1px;
+            }
+          }
+        }
+
       }
     }
   }
@@ -215,7 +244,7 @@
       text-align: center;
       font-size: 24px;
       position: relative;
-      margin: 0 0 38px 0;
+      margin: 0 0 25px 0;
       @media screen and (max-width: 768px) {
         font-size: 20px;
       }
@@ -239,7 +268,7 @@
     }
     &__item {
       // height: 250px;
-      padding: 0px 0;
+      padding: 15px 0 0 0;
 
       display: flex;
       flex-wrap: wrap;
@@ -247,6 +276,11 @@
       margin: 0px 18px;
       outline: none;
       position: relative;
+      &:hover {
+        .slick__item--img {
+          transform: scale(1.25);
+        }
+      }
       &:after {
         content: "";
         position: absolute;
@@ -275,6 +309,7 @@
           font-weight: 600;
           color: #545454;
           margin: auto;
+          font-size: 16px;
         }
         ul {
           li {
