--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,9 @@ main {
   align-self: flex-start;
   text-align: left;
   background-position: center !important;
+  @media screen and (max-width: 1440px) {
+  padding: 34px 0 34px 0!important;
+  }
   @media screen and (max-width: 768px) {
     padding: 30px 0 30px 0!important;
   }
